ghc-4335c07/testsuite/tests/dependent/should_fail/SelfDep.hs
module SelfDep where

data T :: T -> *
